--- a/docs/api-reference/CRMScript.Native.Cache.yml
+++ b/docs/api-reference/CRMScript.Native.Cache.yml
@@ -26,7 +26,7 @@ items:
   so.intellisense: Void.Cache
   langs:
   - crmscript
-  name: '#ctor'
+  name: Cache()
   nameWithType: Cache.#ctor
   fullName: CRMScript.Native.Cache.#ctor
   type: Constructor
