--- a/docs/api-reference/CRMScript.Native.Category.yml
+++ b/docs/api-reference/CRMScript.Native.Category.yml
@@ -24,7 +24,7 @@ items:
   so.intellisense: Void.Category
   langs:
   - crmscript
-  name: '#ctor'
+  name: Category()
   nameWithType: Category.#ctor
   fullName: CRMScript.Native.Category.#ctor
   type: Constructor
