--- a/docs/api-reference/CRMScript.Native.Company.yml
+++ b/docs/api-reference/CRMScript.Native.Company.yml
@@ -31,7 +31,7 @@ items:
   so.intellisense: Void.Company
   langs:
   - crmscript
-  name: '#ctor'
+  name: Company()
   nameWithType: Company.#ctor
   fullName: CRMScript.Native.Company.#ctor
   type: Constructor
