--- a/docs/api-reference/CRMScript.Native.Customer.yml
+++ b/docs/api-reference/CRMScript.Native.Customer.yml
@@ -42,7 +42,7 @@ items:
   so.intellisense: Void.Customer
   langs:
   - crmscript
-  name: '#ctor'
+  name: Customer()
   nameWithType: Customer.#ctor
   fullName: CRMScript.Native.Customer.#ctor
   type: Constructor
