--- a/docs/api-reference/CRMScript.Native.DBWrite.yml
+++ b/docs/api-reference/CRMScript.Native.DBWrite.yml
@@ -30,7 +30,7 @@ items:
   so.intellisense: Void.DBWrite
   langs:
   - crmscript
-  name: '#ctor'
+  name: DBWrite()
   nameWithType: DBWrite.#ctor
   fullName: CRMScript.Native.DBWrite.#ctor
   type: Constructor
