--- a/docs/api-reference/CRMScript.Native.Email.yml
+++ b/docs/api-reference/CRMScript.Native.Email.yml
@@ -23,7 +23,7 @@ items:
   so.intellisense: Void.Email
   langs:
   - crmscript
-  name: '#ctor'
+  name: Email()
   nameWithType: Email.#ctor
   fullName: CRMScript.Native.Email.#ctor
   type: Constructor
