--- a/docs/api-reference/CRMScript.Native.EventData.yml
+++ b/docs/api-reference/CRMScript.Native.EventData.yml
@@ -34,7 +34,7 @@ items:
   so.intellisense: Void.EventData
   langs:
   - crmscript
-  name: '#ctor'
+  name: EventData()
   nameWithType: EventData.#ctor
   fullName: CRMScript.Native.EventData.#ctor
   type: Constructor
