--- a/docs/api-reference/CRMScript.Native.ExtraFieldsInfo.yml
+++ b/docs/api-reference/CRMScript.Native.ExtraFieldsInfo.yml
@@ -33,7 +33,7 @@ items:
   so.intellisense: Void.ExtraFieldsInfo
   langs:
   - crmscript
-  name: '#ctor'
+  name: ExtraFieldsInfo()
   nameWithType: ExtraFieldsInfo.#ctor
   fullName: CRMScript.Native.ExtraFieldsInfo.#ctor
   type: Constructor
