--- a/docs/api-reference/CRMScript.Native.ExtraTable.yml
+++ b/docs/api-reference/CRMScript.Native.ExtraTable.yml
@@ -28,7 +28,7 @@ items:
   so.intellisense: Void.ExtraTable
   langs:
   - crmscript
-  name: '#ctor'
+  name: ExtraTable()
   nameWithType: ExtraTable.#ctor
   fullName: CRMScript.Native.ExtraTable.#ctor
   type: Constructor
