--- a/docs/api-reference/CRMScript.Native.ExtraTableInfo.yml
+++ b/docs/api-reference/CRMScript.Native.ExtraTableInfo.yml
@@ -24,7 +24,7 @@ items:
   so.intellisense: Void.ExtraTableInfo
   langs:
   - crmscript
-  name: '#ctor'
+  name: ExtraTableInfo()
   nameWithType: ExtraTableInfo.#ctor
   fullName: CRMScript.Native.ExtraTableInfo.#ctor
   type: Constructor
