--- a/docs/api-reference/CRMScript.Native.FHBitSet.yml
+++ b/docs/api-reference/CRMScript.Native.FHBitSet.yml
@@ -26,7 +26,7 @@ items:
   so.intellisense: Void.FHBitSet
   langs:
   - crmscript
-  name: '#ctor'
+  name: FHBitSet()
   nameWithType: FHBitSet.#ctor
   fullName: CRMScript.Native.FHBitSet.#ctor
   type: Constructor
