--- a/docs/api-reference/CRMScript.Native.File.yml
+++ b/docs/api-reference/CRMScript.Native.File.yml
@@ -33,7 +33,7 @@ items:
   so.envir: onsite
   langs:
   - crmscript
-  name: '#ctor'
+  name: File()
   nameWithType: File.#ctor
   fullName: CRMScript.Native.File.#ctor
   type: Constructor
