--- a/docs/api-reference/CRMScript.Native.GenericSearch.yml
+++ b/docs/api-reference/CRMScript.Native.GenericSearch.yml
@@ -34,7 +34,7 @@ items:
   so.intellisense: Void.GenericSearch
   langs:
   - crmscript
-  name: '#ctor'
+  name: GenericSearch()
   nameWithType: GenericSearch.#ctor
   fullName: CRMScript.Native.GenericSearch.#ctor
   type: Constructor
