--- a/docs/api-reference/CRMScript.Native.HTTP.yml
+++ b/docs/api-reference/CRMScript.Native.HTTP.yml
@@ -44,7 +44,7 @@ items:
   so.intellisense: Void.HTTP
   langs:
   - crmscript
-  name: '#ctor'
+  name: HTTP()
   nameWithType: HTTP.#ctor
   fullName: CRMScript.Native.HTTP.#ctor
   type: Constructor
