--- a/docs/api-reference/CRMScript.Native.Inbox.yml
+++ b/docs/api-reference/CRMScript.Native.Inbox.yml
@@ -20,7 +20,7 @@ items:
   so.intellisense: Void.Inbox
   langs:
   - crmscript
-  name: '#ctor'
+  name: Inbox()
   nameWithType: Inbox.#ctor
   fullName: CRMScript.Native.Inbox.#ctor
   type: Constructor
