--- a/docs/api-reference/CRMScript.Native.InvoiceEntry.yml
+++ b/docs/api-reference/CRMScript.Native.InvoiceEntry.yml
@@ -30,7 +30,7 @@ items:
   so.intellisense: Void.InvoiceEntry
   langs:
   - crmscript
-  name: '#ctor'
+  name: InvoiceEntry()
   nameWithType: InvoiceEntry.#ctor
   fullName: CRMScript.Native.InvoiceEntry.#ctor
   type: Constructor
