--- a/docs/api-reference/CRMScript.Native.JSONBuilder.yml
+++ b/docs/api-reference/CRMScript.Native.JSONBuilder.yml
@@ -30,7 +30,7 @@ items:
   so.intellisense: Void.JSONBuilder
   langs:
   - crmscript
-  name: '#ctor'
+  name: JSONBuilder()
   nameWithType: JSONBuilder.#ctor
   fullName: CRMScript.Native.JSONBuilder.#ctor
   type: Constructor
