--- a/docs/api-reference/CRMScript.Native.Knowledge.yml
+++ b/docs/api-reference/CRMScript.Native.Knowledge.yml
@@ -21,7 +21,7 @@ items:
   so.intellisense: Void.Knowledge
   langs:
   - crmscript
-  name: '#ctor'
+  name: Knowledge()
   nameWithType: Knowledge.#ctor
   fullName: CRMScript.Native.Knowledge.#ctor
   type: Constructor
