--- a/docs/api-reference/CRMScript.Native.LocalizedField.yml
+++ b/docs/api-reference/CRMScript.Native.LocalizedField.yml
@@ -29,7 +29,7 @@ items:
   so.intellisense: Void.LocalizedField
   langs:
   - crmscript
-  name: '#ctor'
+  name: LocalizedField()
   nameWithType: LocalizedField.#ctor
   fullName: CRMScript.Native.LocalizedField.#ctor
   type: Constructor
