--- a/docs/api-reference/CRMScript.Native.MacroParameter.yml
+++ b/docs/api-reference/CRMScript.Native.MacroParameter.yml
@@ -39,7 +39,7 @@ items:
   so.intellisense: Void.MacroParameter
   langs:
   - crmscript
-  name: '#ctor'
+  name: MacroParameter()
   nameWithType: MacroParameter.#ctor
   fullName: CRMScript.Native.MacroParameter.#ctor
   type: Constructor
