--- a/docs/api-reference/CRMScript.Native.MacroReturnValue.yml
+++ b/docs/api-reference/CRMScript.Native.MacroReturnValue.yml
@@ -24,7 +24,7 @@ items:
   so.intellisense: Void.MacroReturnValue
   langs:
   - crmscript
-  name: '#ctor'
+  name: MacroReturnValue()
   nameWithType: MacroReturnValue.#ctor
   fullName: CRMScript.Native.MacroReturnValue.#ctor
   type: Constructor
