--- a/docs/api-reference/CRMScript.Native.Message.yml
+++ b/docs/api-reference/CRMScript.Native.Message.yml
@@ -39,7 +39,7 @@ items:
   so.intellisense: Void.Message
   langs:
   - crmscript
-  name: '#ctor'
+  name: Message()
   nameWithType: Message.#ctor
   fullName: CRMScript.Native.Message.#ctor
   type: Constructor
