--- a/docs/api-reference/CRMScript.Native.Parser.yml
+++ b/docs/api-reference/CRMScript.Native.Parser.yml
@@ -27,7 +27,7 @@ items:
   so.intellisense: Void.Parser
   langs:
   - crmscript
-  name: '#ctor'
+  name: Parser()
   nameWithType: Parser.#ctor
   fullName: CRMScript.Native.Parser.#ctor
   type: Constructor
