--- a/docs/api-reference/CRMScript.Native.Priority.yml
+++ b/docs/api-reference/CRMScript.Native.Priority.yml
@@ -20,7 +20,7 @@ items:
   so.intellisense: Void.Priority
   langs:
   - crmscript
-  name: '#ctor'
+  name: Priority()
   nameWithType: Priority.#ctor
   fullName: CRMScript.Native.Priority.#ctor
   type: Constructor
