--- a/docs/api-reference/CRMScript.Native.Profile.yml
+++ b/docs/api-reference/CRMScript.Native.Profile.yml
@@ -20,7 +20,7 @@ items:
   so.intellisense: Void.Profile
   langs:
   - crmscript
-  name: '#ctor'
+  name: Profile()
   nameWithType: Profile.#ctor
   fullName: CRMScript.Native.Profile.#ctor
   type: Constructor
