--- a/docs/api-reference/CRMScript.Native.ReplyTemplate.yml
+++ b/docs/api-reference/CRMScript.Native.ReplyTemplate.yml
@@ -27,7 +27,7 @@ items:
   so.intellisense: Void.ReplyTemplate
   langs:
   - crmscript
-  name: '#ctor'
+  name: ReplyTemplate()
   nameWithType: ReplyTemplate.#ctor
   fullName: CRMScript.Native.ReplyTemplate.#ctor
   type: Constructor
