--- a/docs/api-reference/CRMScript.Native.SpmMessage.yml
+++ b/docs/api-reference/CRMScript.Native.SpmMessage.yml
@@ -26,7 +26,7 @@ items:
   so.intellisense: Void.SpmMessage
   langs:
   - crmscript
-  name: '#ctor'
+  name: SpmMessage()
   nameWithType: SpmMessage.#ctor
   fullName: CRMScript.Native.SpmMessage.#ctor
   type: Constructor
