--- a/docs/api-reference/CRMScript.Native.SpmStaticList.yml
+++ b/docs/api-reference/CRMScript.Native.SpmStaticList.yml
@@ -27,7 +27,7 @@ items:
   so.intellisense: Void.SpmStaticList
   langs:
   - crmscript
-  name: '#ctor'
+  name: SpmStaticList()
   nameWithType: SpmStaticList.#ctor
   fullName: CRMScript.Native.SpmStaticList.#ctor
   type: Constructor
