--- a/docs/api-reference/CRMScript.Native.StatResult.yml
+++ b/docs/api-reference/CRMScript.Native.StatResult.yml
@@ -28,7 +28,7 @@ items:
   so.intellisense: Void.StatResult
   langs:
   - crmscript
-  name: '#ctor'
+  name: StatResult()
   nameWithType: StatResult.#ctor
   fullName: CRMScript.Native.StatResult.#ctor
   type: Constructor
