--- a/docs/api-reference/CRMScript.Native.StringMatrix.yml
+++ b/docs/api-reference/CRMScript.Native.StringMatrix.yml
@@ -27,7 +27,7 @@ items:
   so.intellisense: Void.StringMatrix
   langs:
   - crmscript
-  name: '#ctor'
+  name: StringMatrix()
   nameWithType: StringMatrix.#ctor
   fullName: CRMScript.Native.StringMatrix.#ctor
   type: Constructor
