--- a/docs/api-reference/CRMScript.Native.Ticket.yml
+++ b/docs/api-reference/CRMScript.Native.Ticket.yml
@@ -42,7 +42,7 @@ items:
   so.intellisense: Void.Ticket
   langs:
   - crmscript
-  name: '#ctor'
+  name: Ticket()
   nameWithType: Ticket.#ctor
   fullName: CRMScript.Native.Ticket.#ctor
   type: Constructor
