--- a/docs/api-reference/CRMScript.Native.TimeZone.yml
+++ b/docs/api-reference/CRMScript.Native.TimeZone.yml
@@ -21,7 +21,7 @@ items:
   so.intellisense: Void.TimeZone
   langs:
   - crmscript
-  name: '#ctor'
+  name: TimeZone()
   nameWithType: TimeZone.#ctor
   fullName: CRMScript.Native.TimeZone.#ctor
   type: Constructor
