--- a/docs/api-reference/CRMScript.Native.WeekSchedule.yml
+++ b/docs/api-reference/CRMScript.Native.WeekSchedule.yml
@@ -52,7 +52,7 @@ items:
   so.intellisense: Void.WeekSchedule
   langs:
   - crmscript
-  name: '#ctor'
+  name: WeekSchedule()
   nameWithType: WeekSchedule.#ctor
   fullName: CRMScript.Native.WeekSchedule.#ctor
   type: Constructor
