--- a/docs/api-reference/CRMScript.Native.YearSchedule.yml
+++ b/docs/api-reference/CRMScript.Native.YearSchedule.yml
@@ -22,7 +22,7 @@ items:
   so.intellisense: Void.YearSchedule
   langs:
   - crmscript
-  name: '#ctor'
+  name: YearSchedule()
   nameWithType: YearSchedule.#ctor
   fullName: CRMScript.Native.YearSchedule.#ctor
   type: Constructor
