--- a/docs/api-reference/CRMScript.Native.DbConverter.yml
+++ b/docs/api-reference/CRMScript.Native.DbConverter.yml
@@ -26,7 +26,7 @@ items:
   so.intellisense: Void.DbConverter
   langs:
   - crmscript
-  name: '#ctor'
+  name: DbConverter()
   nameWithType: DbConverter.#ctor
   fullName: CRMScript.Native.DbConverter.#ctor
   type: Constructor
