--- a/docs/api-reference/CRMScript.Native.DbiControl.yml
+++ b/docs/api-reference/CRMScript.Native.DbiControl.yml
@@ -25,7 +25,7 @@ items:
   so.intellisense: Void.DbiControl
   langs:
   - crmscript
-  name: '#ctor'
+  name: DbiControl()
   nameWithType: DbiControl.#ctor
   fullName: CRMScript.Native.DbiControl.#ctor
   type: Constructor
