--- a/docs/api-reference/CRMScript.Native.EabEntry.yml
+++ b/docs/api-reference/CRMScript.Native.EabEntry.yml
@@ -26,7 +26,7 @@ items:
   so.intellisense: Void.EabEntry
   langs:
   - crmscript
-  name: '#ctor'
+  name: EabEntry()
   nameWithType: EabEntry.#ctor
   fullName: CRMScript.Native.EabEntry.#ctor
   type: Constructor
