--- a/docs/api-reference/CRMScript.Native.License.yml
+++ b/docs/api-reference/CRMScript.Native.License.yml
@@ -25,7 +25,7 @@ items:
   so.intellisense: Void.License
   langs:
   - crmscript
-  name: '#ctor'
+  name: License()
   nameWithType: License.#ctor
   fullName: CRMScript.Native.License.#ctor
   type: Constructor
