--- a/docs/api-reference/CRMScript.Native.Notify.yml
+++ b/docs/api-reference/CRMScript.Native.Notify.yml
@@ -25,7 +25,7 @@ items:
   so.intellisense: Void.Notify
   langs:
   - crmscript
-  name: '#ctor'
+  name: Notify()
   nameWithType: Notify.#ctor
   fullName: CRMScript.Native.Notify.#ctor
   type: Constructor
