--- a/docs/api-reference/CRMScript.Native.SearchEngine.yml
+++ b/docs/api-reference/CRMScript.Native.SearchEngine.yml
@@ -66,7 +66,7 @@ items:
   so.intellisense: Void.SearchEngine
   langs:
   - crmscript
-  name: '#ctor'
+  name: SearchEngine()
   nameWithType: SearchEngine.#ctor
   fullName: CRMScript.Native.SearchEngine.#ctor
   type: Constructor
