--- a/docs/api-reference/CRMScript.Native.SpmCustomerList.yml
+++ b/docs/api-reference/CRMScript.Native.SpmCustomerList.yml
@@ -26,7 +26,7 @@ items:
   so.intellisense: Void.SpmCustomerList
   langs:
   - crmscript
-  name: '#ctor'
+  name: SpmCustomerList()
   nameWithType: SpmCustomerList.#ctor
   fullName: CRMScript.Native.SpmCustomerList.#ctor
   type: Constructor
