--- a/docs/api-reference/CRMScript.Native.SpmShipment.yml
+++ b/docs/api-reference/CRMScript.Native.SpmShipment.yml
@@ -31,7 +31,7 @@ items:
   so.intellisense: Void.SpmShipment
   langs:
   - crmscript
-  name: '#ctor'
+  name: SpmShipment()
   nameWithType: SpmShipment.#ctor
   fullName: CRMScript.Native.SpmShipment.#ctor
   type: Constructor
