--- a/docs/api-reference/CRMScript.Native.StatLib.yml
+++ b/docs/api-reference/CRMScript.Native.StatLib.yml
@@ -32,7 +32,7 @@ items:
   so.intellisense: Void.StatLib
   langs:
   - crmscript
-  name: '#ctor'
+  name: StatLib()
   nameWithType: StatLib.#ctor
   fullName: CRMScript.Native.StatLib.#ctor
   type: Constructor
