--- a/docs/api-reference/CRMScript.Native.Timer.yml
+++ b/docs/api-reference/CRMScript.Native.Timer.yml
@@ -25,7 +25,7 @@ items:
   so.intellisense: Void.Timer
   langs:
   - crmscript
-  name: '#ctor'
+  name: Timer()
   nameWithType: Timer.#ctor
   fullName: CRMScript.Native.Timer.#ctor
   type: Constructor
