--- a/docs/api-reference/CRMScript.Native.User.yml
+++ b/docs/api-reference/CRMScript.Native.User.yml
@@ -29,7 +29,7 @@ items:
   so.intellisense: Void.User
   langs:
   - crmscript
-  name: '#ctor'
+  name: User()
   nameWithType: User.#ctor
   fullName: CRMScript.Native.User.#ctor
   type: Constructor
