Fixing errors, adding missing parameter types

--- a/docs/api-reference/CRMScript.Global.String.yml
+++ b/docs/api-reference/CRMScript.Global.String.yml
@@ -89,7 +89,7 @@ items:
   langs:
   - crmscript
   parent: CRMScript.Global.String
-  name: String
+  name: String()
   nameWithType: String.String
   fullName: CRMScript.Global.String.String
   type: Constructor
