--- a/docs/api-reference/CRMScript.NetServer.NSPluginResponse.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPluginResponse.yml
@@ -154,8 +154,8 @@ items:
     content: Void SetChanges(NSChangedData changes)
     parameters:
     - id: changes
-      type: 
-      description: Tablename/recordid of data changed by this method, that the client may need to reload."
+      type: CRMScript.NetServer.NSChangedData
+      description: "Tablename/recordid of data changed by this method, that the client may need to reload."
     return:
       type: CRMScript.Global.Void."
   example: 
