--- a/docs/api-reference/CRMScript.NetServer.NSQuote.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuote.yml
@@ -484,7 +484,7 @@ items:
     content: Void SetFavoriteQuoteAlternative(NSQuoteAlternative favoriteQuoteAlternative)
     parameters:
     - id: favoriteQuoteAlternative
-      type: 
+      type: CRMScript.NetServer.NSQuoteAlternative
       description: "The favorite quote alternative for the quote and active quote version."
     return:
       type: CRMScript.Global.Void."
