--- a/docs/api-reference/CRMScript.NetServer.NSSelectableMDOListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectableMDOListItem.yml
@@ -374,7 +374,7 @@ items:
     content: Void SetChildItems(NSSelectableMDOListItem[] childItems)
     parameters:
     - id: childItems
-      type: 
+      type: CRMScript.NetServer.NSSelectableMDOListItem[]
       description: "The child items of the NSSelectableMDOListItem."
     return:
       type: CRMScript.Global.Void."
