Fix CRMScript.Native.MacroParameter contructor name

--- a/docs/api-reference/CRMScript.Native.MacroParameter.yml
+++ b/docs/api-reference/CRMScript.Native.MacroParameter.yml
@@ -54,7 +54,7 @@ items:
   so.intellisense: Void.MacroParameter
   langs:
   - crmscript
-  name: '#ctor(String,String,Map,String,String,Bool)'
+  name: 'MacroParameter(String,String,Map,String,String,Bool)'
   nameWithType: CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool)
   fullName: CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool)
   type: Constructor
@@ -90,7 +90,7 @@ items:
   so.intellisense: Void.MacroParameter
   langs:
   - crmscript
-  name: '#ctor(String,String,Map,String,String,Bool,String,Bool)'
+  name: 'MacroParameter(String,String,Map,String,String,Bool,String,Bool)'
   nameWithType: CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool,String,Bool)
   fullName: CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool,String,Bool)
   type: Constructor
