Fix CRMScript.Native.MacroReturnValue contructor name

--- a/docs/api-reference/CRMScript.Native.MacroReturnValue.yml
+++ b/docs/api-reference/CRMScript.Native.MacroReturnValue.yml
@@ -39,7 +39,7 @@ items:
   so.intellisense: Void.MacroReturnValue
   langs:
   - crmscript
-  name: '#ctor(String,String)'
+  name: 'MacroReturnValue(String,String)'
   nameWithType: MacroReturnValue.#ctor(String,String)
   fullName: CRMScript.Native.MacroReturnValue.#ctor(String,String)
   type: Constructor
