Fix CRMScript yaml License and Customer

--- a/docs/api-reference/CRMScript.Native.Customer.yml
+++ b/docs/api-reference/CRMScript.Native.Customer.yml
@@ -193,7 +193,7 @@ items:
   summary: "\nFinds an entry in the external database based on an email address and an extTable ID to limit the search to one data source.\n"
   remarks: "\nIt will search all external data sources for a Customer matching the given email address. If an entry is found, a proxy entry is created and saved.\n"
   syntax: 
-    content: Bool findExternallyFromEmail(String email)
+    content: Bool findExternallyFromEmail(String email, Integer extTable)
     parameters:
     - id: email
       type: CRMScript.Global.String
