--- a/docs/api-reference/CRMScript.Native.License.yml
+++ b/docs/api-reference/CRMScript.Native.License.yml
@@ -40,7 +40,7 @@ items:
   so.intellisense: Void.License
   langs:
   - crmscript
-  name: '#ctor(String,String)'
+  name: 'License(String,String)'
   nameWithType: License.#ctor(String,String)
   fullName: CRMScript.Native.License.#ctor(String,String)
   type: Constructor
