Fixed missing so.intellisense on constructors

--- a/docs/api-reference/CRMScript.Global.Float.yml
+++ b/docs/api-reference/CRMScript.Global.Float.yml
@@ -25,6 +25,7 @@ items:
 - uid: CRMScript.Global.Float.#ctor
   commentId: M:CRMScript.Global.Float.#ctor
   id: '#ctor'
+  so.intellisense: Void.Float
   langs:
   - crmscript
   parent: CRMScript.Global.Float
@@ -42,6 +43,7 @@ items:
 - uid: CRMScript.Global.Float.#ctor(Float)
   commentId: M:CRMScript.Global.Float.#ctor(Float)
   id: '#ctor(Float)'
+  so.intellisense: Void.Float
   langs:
   - crmscript
   parent: CRMScript.Global.Float
@@ -63,6 +65,7 @@ items:
 - uid: CRMScript.Global.Float.#ctor(Integer)
   commentId: M:CRMScript.Global.Float.#ctor(Integer)
   id: '#ctor(Integer)'
+  so.intellisense: Void.Float
   langs:
   - crmscript
   parent: CRMScript.Global.Integer
@@ -84,6 +87,7 @@ items:
 - uid: CRMScript.Global.Float.#ctor(String)
   commentId: M:CRMScript.Global.Float.#ctor(String)
   id: '#ctor(String)'
+  so.intellisense: Void.Float
   langs:
   - crmscript
   parent: CRMScript.Global.Float
