--- a/docs/api-reference/CRMScript.Native.Vector.yml
+++ b/docs/api-reference/CRMScript.Native.Vector.yml
@@ -24,6 +24,7 @@ items:
 - uid: CRMScript.Native.Vector.#ctor(Integer[])
   commentId: M:CRMScript.Native.Vector.#ctor(Integer[])
   id: '#ctor(Integer[])'
+  so.intellisense: Vector
   langs:
   - crmscript
   parent: CRMScript.Native.Vector
