--- a/docs/api-reference/CRMScript.Global.Date.yml
+++ b/docs/api-reference/CRMScript.Global.Date.yml
@@ -71,6 +71,7 @@ items:
 - uid: CRMScript.Global.Date.#ctor(String)
   commentId: M:CRMScript.Global.Date.#ctor(String)
   id: '#ctor(String)'
+  so.intellisense: Void.Date
   langs:
   - crmscript
   parent: CRMScript.Global.Date
