--- a/docs/api-reference/CRMScript.Native.Generic.yml
+++ b/docs/api-reference/CRMScript.Native.Generic.yml
@@ -17,7 +17,7 @@ items:
   - CRMScript.Native.Generic.GenericToDate(Generic)
   - CRMScript.Native.Generic.GenericToDateTime(Generic)
   - CRMScript.Native.Generic.GenericToTime(Generic)
-#  - CRMScript.Native.Generic.GenericToTimeSpan(Generic)
+  - CRMScript.Native.Generic.GenericToTimeSpan(Generic)
   - CRMScript.Native.Generic.GenericToArray(Generic)
   - CRMScript.Native.Generic.getTypeDimensions(Generic)
   - CRMScript.Native.Generic.typeIsStruct(Generic)
@@ -305,28 +305,28 @@ items:
     return:
       type: CRMScript.Global.Time
       description: "The variable as a Time."
-#- uid: CRMScript.Native.Generic.GenericToTimeSpan(Generic)
-#  commentId: M:CRMScript.Native.Generic.GenericToTimeSpan(Generic)
-#  id: GenericToTimeSpan(Generic)
-#  so.intellisense: Generic.GenericToTimeSpan
-#  langs:
-#  - crmscript
-#  parent: CRMScript.Native.Generic
-#  name: GenericToTimeSpan(Generic)
-#  nameWithType: Generic.GenericToTimeSpan(Generic)
-#  fullName: CRMScript.Native.Generic.GenericToTimeSpan(Generic)
-#  type: Method
-#  summary: "\nConverts a Generic variable to a TimeSpan (explicit downcast). Together with getTypeName(), this function can be used to get an explicit typed variable.\n"
-#  remarks: "\nIf the generic does not represent the correct type, an exception is thrown.\n"
-#  syntax:
-#    content: TimeSpan GenericToTimeSpan(Generic value)
-#    parameters:
-#    - id: value
-#      type: CRMScript.Native.Generic
-#      description: "The variable to downcast.
-#    return:
-#      type: CRMScript.Native.TimeSpan
-#      description: "The variable as a TimeSpan."
+- uid: CRMScript.Native.Generic.GenericToTimeSpan(Generic)
+  commentId: M:CRMScript.Native.Generic.GenericToTimeSpan(Generic)
+  id: GenericToTimeSpan(Generic)
+  so.intellisense: Generic.GenericToTimeSpan
+  langs:
+  - crmscript
+  parent: CRMScript.Native.Generic
+  name: GenericToTimeSpan(Generic)
+  nameWithType: Generic.GenericToTimeSpan(Generic)
+  fullName: CRMScript.Native.Generic.GenericToTimeSpan(Generic)
+  type: Method
+  summary: "\nConverts a Generic variable to a TimeSpan (explicit downcast). Together with getTypeName(), this function can be used to get an explicit typed variable.\n"
+  remarks: "\nIf the generic does not represent the correct type, an exception is thrown.\n"
+  syntax:
+    content: TimeSpan GenericToTimeSpan(Generic value)
+    parameters:
+    - id: value
+      type: CRMScript.Native.Generic
+      description: "The variable to downcast."
+    return:
+      type: CRMScript.Native.TimeSpan
+      description: "The variable as a TimeSpan."
 - uid: CRMScript.Native.Generic.GenericToByte(Generic)
   commentId: M:CRMScript.Native.Generic.GenericToByte(Generic)
   id: GenericToByte(Generic)
@@ -536,4 +536,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
-# Add TimeSpan
+- uid: CRMScript.Native.TimeSpan
+  commentId: T:CRMScript.Native.TimeSpan
+  isExternal: true
+  name: TimeSpan
+  nameWithType: TimeSpan
+  fullName: CRMScript.Native.TimeSpan
