#9 changed descending to description as label

--- a/docs/api-reference/CRMScript.Native.Category.yml
+++ b/docs/api-reference/CRMScript.Native.Category.yml
@@ -76,7 +76,7 @@ items:
       description: "The ID of the category to load."
     return:
       type: CRMScript.Global.Bool
-      descending: true if the category exists; otherwise, false."
+      description: "True if the category exists; otherwise, false."
   example: 
   - "\n<pre><code>Category c;\n\nc.load(2);\nprint(c.getValue(&quot;name&quot;));</code></pre>\n"
 - uid: CRMScript.Native.Category.save()
