--- a/docs/api-reference/CRMScript.Native.HTTP.yml
+++ b/docs/api-reference/CRMScript.Native.HTTP.yml
@@ -167,7 +167,7 @@ items:
       description: "What to delete."
     return:
       type: CRMScript.Global.Byte[]
-      descending: the result in a byte array."
+      description: "The result in a byte array."
   example: 
   - "\n<pre><code>HTTP h;\n\nByte[] b = h.delete(&quot;https://httpbin.org/delete&quot;);\nif (h.hasError())\n  print(h.getErrorMessage());\nelse</code></pre>\n"
 - uid: CRMScript.Native.HTTP.deleteAsStream(String)
