--- a/docs/api-reference/CRMScript.NetServer.NSActivityInformationListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSActivityInformationListItem.yml
@@ -69,7 +69,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.DateTime
-      descending: The date that this item is valid for."
+      description: "The date that this item is valid for."
   example: 
   - "\n<pre><code>NSActivityInformationListItem thing;\nDateTime date = thing.GetDate();</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivityInformationListItem.SetActivityInformation(NSActivitySummary)
@@ -111,7 +111,7 @@ items:
     parameters:
     - id: date
       type: CRMScript.Global.DateTime
-      descending: The date that this item is valid."
+      description: "The date that this item is valid."
     return:
       type: CRMScript.Global.Void
   example: 
