--- a/docs/api-reference/CRMScript.NetServer.NSArchiveAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveAgent.yml
@@ -37,7 +37,7 @@ items:
   - CRMScript.NetServer.NSArchiveAgent.SetColumnWidths(String,String[])
   - CRMScript.NetServer.NSArchiveAgent.SetColumnWidthsV2(String,String,String,String,String[])
   name: NSArchiveAgent
-  nameWithType: NSArchiveAgent v 
+  nameWithType: NSArchiveAgent
   fullName: CRMScript.NetServer.NSArchiveAgent
   type: Class
   summary: "\nArchiveList functions of all kinds.\n"
