Fix Customer.addEmail(...) method

--- a/docs/api-reference/CRMScript.Native.Customer.yml
+++ b/docs/api-reference/CRMScript.Native.Customer.yml
@@ -65,7 +65,7 @@ items:
   summary: "\nAdds an email to a customerAdds an email to a customer.\n"
   remarks: "\n Commonly used in database integrations.<p></p>\nUse addEmail(String,Integer,Integer,Integer) to provide the external sorting rank.\n"
   syntax: 
-    content: Void addEmail()
+    content: Void addEmail(String email, Integer extTable, Integer dbiAgentId)
     parameters:
     - id: email
       type: CRMScript.Global.String
