#9 Updated some TODOs

--- a/docs/api-reference/CRMScript.Event.Trigger.yml
+++ b/docs/api-reference/CRMScript.Event.Trigger.yml
@@ -107,7 +107,7 @@ items:
   nameWithType: Trigger
   fullName: CRMScript.Event.Trigger
   type: Class
-  summary: # TODO
+  summary: "\n\n"
   example: 
 - uid: CRMScript.Event.Trigger.ChatAfterSaveNewMessage()
   commentId: M:CRMScript.Event.Trigger.ChatAfterSaveNewMessage()
@@ -119,7 +119,7 @@ items:
   nameWithType: Trigger.ChatAfterSaveNewMessage()
   fullName: CRMScript.Event.Trigger.ChatAfterSaveNewMessage()
   type: Method
-  summary: # TODO
+  summary: "\nCalled after a chat message is saved.\n"
   remarks: 
   syntax: 
   example: 
@@ -134,7 +134,7 @@ items:
   nameWithType: Trigger.ChatBeforeSaveNewMessage()
   fullName: CRMScript.Event.Trigger.ChatBeforeSaveNewMessage()
   type: Method
-  summary: # TODO
+  summary: "\nCalled before a chat message is saved.\n"
   remarks: 
   syntax: 
   example: 
@@ -179,7 +179,7 @@ items:
   nameWithType: Trigger.CompactModeInjection()
   fullName: CRMScript.Event.Trigger.CompactModeInjection()
   type: Method
-  summary: # TODO
+  summary: "\nAdd custom stuff to our CompactMode client\n"
   remarks: 
   syntax: 
   example: 
@@ -194,7 +194,7 @@ items:
   nameWithType: Trigger.CustomerCenterAuthentication()
   fullName: CRMScript.Event.Trigger.CustomerCenterAuthentication()
   type: Method
-  summary: # TODO
+  summary: "\nCalled when customer logs into Customer centre.\n"
   remarks: 
   syntax: 
   example: 
@@ -209,7 +209,7 @@ items:
   nameWithType: Trigger.CustomerSetSubscriptions()
   fullName: CRMScript.Event.Trigger.CustomerSetSubscriptions()
   type: Method
-  summary: # TODO
+  summary: "\nCalled when setting subscriptions from Manage subscription page.\n"
   remarks: 
   syntax: 
   example: 
@@ -239,7 +239,7 @@ items:
   nameWithType: Trigger.ImportMailAfterProcessing()
   fullName: CRMScript.Event.Trigger.ImportMailAfterProcessing()
   type: Method
-  summary: # TODO
+  summary: "\nCalled after email is processed by email filters and save to the system.\n"
   remarks: 
   syntax: 
   example: 
@@ -314,7 +314,7 @@ items:
   nameWithType: Trigger.NewTicketFromCustomerCenter()
   fullName: CRMScript.Event.Trigger.NewTicketFromCustomerCenter()
   type: Method
-  summary: # TODO
+  summary: "\nCalled when a new ticket is created and saved from Customer center.\n"
   remarks: 
   syntax: 
   example: 
@@ -329,7 +329,7 @@ items:
   nameWithType: Trigger.NewTicketFromCustomerCenterBeforeSave()
   fullName: CRMScript.Event.Trigger.NewTicketFromCustomerCenterBeforeSave()
   type: Method
-  summary: # TODO
+  summary: "\nCalled before a new ticket is created and saved from Customer center.\n"
   remarks: 
   syntax: 
   example: 
@@ -1514,7 +1514,7 @@ items:
   nameWithType: Trigger.TicketReopenedFromCustomerCenter()
   fullName: CRMScript.Event.Trigger.TicketReopenedFromCustomerCenter()
   type: Method
-  summary: # TODO
+  summary: "\nCalled when a ticket is reopened from Customer center.\n"
   remarks: 
   syntax: 
   example: 
