--- a/docs/api-reference/CRMScript.Global.Void.yml
+++ b/docs/api-reference/CRMScript.Global.Void.yml
@@ -1049,17 +1049,16 @@ items:
   nameWithType: Void.executeScript(String,Map)
   fullName: CRMScript.Global.Void.executeScript(String,Map)
   type: Method
-  summary: # TODO
   remarks: 
   syntax: 
     content: String executeScript(String script, Map values)
     parameters:
     - id: script
       type: CRMScript.Global.String
-      description: 
+      description: "CRMScript code to execute"
     - id: values
       type: CRMScript.Native.Map
-      description:
+      description: 
     return:
       type: CRMScript.Global.String
       description:
@@ -3170,7 +3169,7 @@ items:
   nameWithType: Void.isValidPhoneNumber(String,Bool)
   fullName: CRMScript.Global.Void.isValidPhoneNumber(String,Bool)
   type: Method
-  summary: # TODO
+  summary: "\nValidates if it is a valid phonenumber\n"
   remarks: 
   syntax: 
     content: Bool isValidPhoneNumber(String nr, Bool isMultiple)
@@ -3872,7 +3871,7 @@ items:
   nameWithType: Void.setPageFocusFirstControl(Bool)
   fullName: CRMScript.Global.Void.setPageFocusFirstControl(Bool)
   type: Method
-  summary: # TODO
+  summary: "\nUsed to set focus to first control in screens.\n"
   remarks: 
   syntax: 
     content: Void SetPageFocusFirstControl(Bool p0)
