--- a/docs/api-reference/CRMScript.Native.LocalizedField.yml
+++ b/docs/api-reference/CRMScript.Native.LocalizedField.yml
@@ -49,7 +49,7 @@ items:
   nameWithType: LocalizedField.getAddressType()
   fullName: CRMScript.Native.LocalizedField.getAddressType()
   type: Method
-  summary: # TODO
+  summary: "\nGets address type\n"
   remarks: 
   syntax: 
     content: String getAddressType()
@@ -68,7 +68,7 @@ items:
   nameWithType: LocalizedField.getLabel()
   fullName: CRMScript.Native.LocalizedField.getLabel()
   type: Method
-  summary: # TODO
+  summary: "\nGets label\n"
   remarks: 
   syntax: 
     content: String getLabel()
@@ -87,7 +87,7 @@ items:
   nameWithType: LocalizedField.getName()
   fullName: CRMScript.Native.LocalizedField.getName()
   type: Method
-  summary: # TODO
+  summary: "\nGets name\n"
   remarks: 
   syntax: 
     content: String getName()
@@ -106,7 +106,7 @@ items:
   nameWithType: LocalizedField.getTooltip()
   fullName: CRMScript.Native.LocalizedField.getTooltip()
   type: Method
-  summary: # TODO
+  summary: "\nGets tooltip\n"
   remarks: 
   syntax: 
     content: String getTooltip()
@@ -125,7 +125,7 @@ items:
   nameWithType: LocalizedField.getValue()
   fullName: CRMScript.Native.LocalizedField.getValue()
   type: Method
-  summary: # TODO
+  summary: "\nGets name\n"
   remarks: 
   syntax: 
     content: String getValue()
@@ -144,7 +144,7 @@ items:
   nameWithType: LocalizedField.getValueLength()
   fullName: CRMScript.Native.LocalizedField.getValueLength()
   type: Method
-  summary: # TODO
+  summary: "\nGets value length\n"
   remarks: 
   syntax: 
     content: String getValueLength()
@@ -163,7 +163,7 @@ items:
   nameWithType: LocalizedField.setName(String)
   fullName: CRMScript.Native.LocalizedField.setName(String)
   type: Method
-  summary: # TODO
+  summary: "\nSets name\n"
   remarks: 
   syntax: 
     content: Void setName(String name)
@@ -184,7 +184,7 @@ items:
   nameWithType: LocalizedField.setTooltip(String)
   fullName: CRMScript.Native.LocalizedField.setTooltip(String)
   type: Method
-  summary: # TODO
+  summary: "\nSets tooltip\n"
   remarks: 
   syntax: 
     content: Void setTooltip(String value)
@@ -205,7 +205,7 @@ items:
   nameWithType: LocalizedField.setValue(String)
   fullName: CRMScript.Native.LocalizedField.setValue(String)
   type: Method
-  summary: # TODO
+  summary: "\nSets value\n"
   remarks: 
   syntax: 
     content: Void setValue(String value)
