--- a/docs/api-reference/CRMScript.Native.Message.yml
+++ b/docs/api-reference/CRMScript.Native.Message.yml
@@ -396,7 +396,7 @@ items:
   nameWithType: Message.sendFacebook()
   fullName: CRMScript.Native.Message.sendFacebook()
   type: Method
-  summary: # TODO
+  summary: "\nPosts message to Facebook\n"
   remarks: 
   syntax: 
     content: Void sendFacebook()
