--- a/docs/api-reference/CRMScript.Native.SearchEngine.yml
+++ b/docs/api-reference/CRMScript.Native.SearchEngine.yml
@@ -744,7 +744,7 @@ items:
   nameWithType: SearchEngine.executeJSON()
   fullName: CRMScript.Native.SearchEngine.executeJSON()
   type: Method
-  summary: # TODO
+  summary: \nExecutes the query and return the result as a JSON formatted text.\n"
   remarks: 
   syntax: 
     content: String executeJSON()
@@ -829,7 +829,7 @@ items:
   nameWithType: SearchEngine.findAlternativeFields(String)
   fullName: CRMScript.Native.SearchEngine.findAlternativeFields(String)
   type: Method
-  summary: "\nFinds all alternative fields given a start field.<p></p>\nThese fields can be used in<code>addField()</code>or simular functions.\n"
+  summary: "\nFinds all alternative fields given a start field.<p></p>\nThese fields can be used in<code>addField()</code>or similar functions.\n"
   remarks: 
   syntax: 
     content: String[] findAlternativeFields(String fieldBeginsWith)
@@ -964,7 +964,7 @@ items:
   nameWithType: SearchEngine.getFieldsJSON()
   fullName: CRMScript.Native.SearchEngine.getFieldsJSON()
   type: Method
-  summary: # TODO
+  summary: "\nReturns fields as JSON formatted string.\n"
   remarks: 
   syntax: 
     content: String getFieldsJSON()
