--- a/docs/api-reference/CRMScript.Native.Cache.yml
+++ b/docs/api-reference/CRMScript.Native.Cache.yml
@@ -18,7 +18,7 @@ items:
   nameWithType: Cache
   fullName: CRMScript.Native.Cache
   type: Class
-  summary: # TODO
+  summary: "\nCache to often used db tables and structures and retrieve them in a useful and structured fashion\n"
   example: 
 - uid: CRMScript.Native.Cache.#ctor
   commentId: M:CRMScript.Native.Cache.#ctor
