--- a/docs/api-reference/CRMScript.Global.Void.yml
+++ b/docs/api-reference/CRMScript.Global.Void.yml
@@ -1049,13 +1049,13 @@ items:
   nameWithType: Void.executeScript(String,Map)
   fullName: CRMScript.Global.Void.executeScript(String,Map)
   type: Method
-  remarks: 
+  remarks: "\nFunction to execute CRMScript code supplied.\n"
   syntax: 
     content: String executeScript(String script, Map values)
     parameters:
     - id: script
       type: CRMScript.Global.String
-      description: "CRMScript code to execute"
+      description: "Actual CRMScript code to execute"
     - id: values
       type: CRMScript.Native.Map
       description: 
