--- a/docs/api-reference/CRMScript.Native.StatResult.yml
+++ b/docs/api-reference/CRMScript.Native.StatResult.yml
@@ -210,7 +210,7 @@ items:
   nameWithType: StatResult.saveAsResult(Integer,Integer,Integer)
   fullName: CRMScript.Native.StatResult.saveAsResult(Integer,Integer,Integer)
   type: Method
-  summary: # TODO
+  summary: "\nReturns a reference to a result set.\n"
   remarks: 
   syntax: 
     content: Integer saveAsResult(Integer column, Integer ownerId, Integer maxRows)
