--- a/docs/api-reference/CRMScript.Native.StringMatrix.yml
+++ b/docs/api-reference/CRMScript.Native.StringMatrix.yml
@@ -149,7 +149,7 @@ items:
   nameWithType: StringMatrix.getNumColumns(Integer)
   fullName: CRMScript.Native.StringMatrix.getNumColumns(Integer)
   type: Method
-  summary: # TODO
+  summary: "\nReturns number of columns in a given row\n"
   remarks: 
   syntax: 
     content: Integer getNumColumns(Integer row)
