#54 added version to global functions

--- a/docs/api-reference/CRMScript.Global.Integer.yml
+++ b/docs/api-reference/CRMScript.Global.Integer.yml
@@ -61,6 +61,7 @@ items:
   commentId: M:CRMScript.Global.Integer.#ctor(String)
   id: '#ctor(String)'
   so.intellisense: Void.Integer
+  so.version: 3.1.5
   langs:
   - crmscript
   parent: CRMScript.Global.Integer
