--- a/docs/api-reference/CRMScript.Global.Time.yml
+++ b/docs/api-reference/CRMScript.Global.Time.yml
@@ -68,6 +68,7 @@ items:
   commentId: M:CRMScript.Global.Time.#ctor(String)
   id: '#ctor(String)'
   so.intellisense: Void.Time
+  so.version: 3.0.0
   langs:
   - crmscript
   parent: CRMScript.Global.Time
