--- a/docs/api-reference/CRMScript.Global.String.yml
+++ b/docs/api-reference/CRMScript.Global.String.yml
@@ -178,6 +178,7 @@ items:
   commentId: M:CRMScript.Global.String.#ctor(NSStream)
   id: '#ctor(NSStream)'
   so.intellisense: Void.String
+  so.version: 8.5R08
   langs:
   - crmscript
   parent: CRMScript.Global.String
@@ -202,6 +203,7 @@ items:
   commentId: M:CRMScript.Global.String.#ctor(NSStream, String)
   id: '#ctor(NSStream, String)'
   so.intellisense: Void.String
+  so.version: 8.5R08
   langs:
   - crmscript
   parent: CRMScript.Global.String
